early stage of router module. TODO: make a path resolve for types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
       "@pages/*": ["src/pages/*"],
       "@server": ["src/Server.ts"],
       "@exceptions": ["src/modules/exceptions/"],
-      "@interfaces/*": ["src/interfaces/*"],
+      "@interfaces/*": ["src/modules/interfaces/*"],
       "@Router": ["src/modules/router/*"],
       "@types": ["src/module/@types/"]
     }
